# Online_SR_Methods

./: .dockerignore  .env  .env.dev  .gitignore  Efremov_P2kh_Zadanie.doc  IU3-11M_EfremovSA_Praktika_v2.docx  README.md  docker-compose.yml  pull  push  pyproject.toml  test.docx  test_structure.txt  ~$test.docx
src/backend/: Dockerfile  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.dev  models.example.json
src/backend/app/: main.py
src/backend/app/api/: routes.py
src/backend/app/core/: config.py
src/backend/app/ml/: __init__.py  bicubic.py  model_runtime.py  realesrgan.py  srcnn.py
src/backend/app/schemas/: __init__.py  health.py  inference.py
src/backend/app/services/: __init__.py  image_codec.py  model_registry.py  super_resolution.py
src/backend/assets/weights/: srcnn_rgb_best.pth
src/backend/tests/: conftest.py  test_api.py  test_image_codec.py  test_rgb_channels.py  test_super_resolution.py
src/frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
src/frontend/src/: App.jsx  styles.css
