[project]
name = "practica"
version = "0.1.0"
description = ""
authors = [
    {name = "snail",email = "sgefsnkiospch908@gmail.com"}
]
requires-python = ">=3.13,<3.14.1"
dependencies = [
    "opencv-python-headless (>=4.13.0.92,<5.0.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "torchvision (>=0.26.0,<0.27.0)",
    "pip (>=26.1,<27.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
